Openllet,DLEJena2/dlejena_v2.0/output_ApacheMavenSingleJar/PropertyChain_compile.txt
examples\PropertyChain.java:7: error: package dlejena does not exist
import dlejena.DLEJenaReasoner;
              ^
examples\PropertyChain.java:30: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
        ^
  symbol:   class DLEJenaReasoner
  location: class PropertyChain
examples\PropertyChain.java:30: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
                                  ^
  symbol:   class DLEJenaReasoner
  location: class PropertyChain
examples\PropertyChain.java:52: error: package dlejena.utils does not exist
        dlejena.utils.Print.printRuleSet(dle.getABoxRules());
                     ^
4 errors
